# VoxelRT

./: .gitignore  .gitmodules  LICENSE.md  README.md
assets/bluenoise/: README.txt
docs/: VoxelNotes.md
docs/sketches/: README.md  RayMaskFilterLUT.cpp  aniso_ocm_sample.js  bit_grid_intersect.js  chessboardSpread.js  dda.js  dda_anim.js  dda_vs_parametric.glsl  df_trace.js  jumpFlood1.js  quadtree.js  quadtree_v2.js  rast_play.js  ray_filter_mask.js  traversal_fract.js
src/: CMakeLists.txt  DebugDisplay.natvis  vcpkg-configuration.json  vcpkg.json
src/CpuModelViewer/: CMakeLists.txt  Main.cpp
src/CpuModelViewer/Rendering/: Common.h  DepthPyramid.cpp  DepthPyramid.h  RendererShaders.h  SSAO.h
src/CpuVoxelRT/: BrickSlotAllocator.cpp  BrickSlotAllocator.h  CMakeLists.txt  CpuTracer.cpp  GpuRenderer.cpp  Main.cpp  PaletteBuilder.h  RayMarching.h  Renderer.h  TerrainGenerator.cpp  VoxelMap.cpp  VoxelMap.h  VoxelSerialize.cpp  Voxelize.cpp
src/CpuVoxelRT/Shaders/: VoxelMap.glsl  VoxelRender.frag
src/LibGlimpsw/: CMakeLists.txt
src/LibGlimpsw/Common/: BinaryIO.cpp  BinaryIO.h  Camera.h  PaletteBuilder.h  Scene.cpp  Scene.h  SettingManager.cpp  SettingManager.h  SettingStore.cpp  SettingStore.h
src/LibGlimpsw/Havk/: CommandQueue.cpp  Context.cpp  FileWatcher.cpp  Havk.h  ImageIO.cpp  Internal.h  Pipeline.cpp  Resource.cpp  Swapchain.cpp
src/LibGlimpsw/OGL/: QuickGL.cpp  QuickGL.h  ShaderLib.cpp  ShaderLib.h
src/LibGlimpsw/SwRast/: Clipper.cpp  ImageHelpers.cpp  Rasterizer.cpp  Rasterizer.h  SIMD.h  SIMD_AVX2.h  SIMD_AVX512.h  Texture.h  VertexReader.cpp
src/VoxelRT/: BrickSlotAllocator.cpp  BrickSlotAllocator.h  Brush.cpp  Brush.h  CMakeLists.txt  CpuRenderer.cpp  GBuffer.h  GpuRenderer.cpp  GpuRenderer_.cpp  GpuRenderer_CM.cpp  Main.cpp  Renderer.h  TerrainGenerator.cpp  TerrainGenerator.h  VoxelMap.cpp  VoxelMap.h  Voxelize.cpp
src/VoxelRT/CpuRenderer/: CpuRenderer.cpp
src/VoxelRT/Rendering/: BlueNoise.h  GBuffer.h
src/VoxelRT/Shaders/: BlitTiledFramebuffer_4x4.frag  BlueNoiseSort.comp  CopyTiledFramebuffer.comp  Denoise.comp  DenoiseSVGF.comp  GBuffer.glsl  GBuffer.slang  GBufferBlit.frag  GBufferBlit.slang  GenAnisoExpansionTable.js  Noise.slang  PanoramaToCube.comp  PanoramaToCube.slang  RandomGen.glsl  RayMaskOptimizationLUT.slang  ResolveCpuFramebuffer.slang  UpdateOccupancy.comp  UpdateOccupancy.slang  VoxelMap.glsl  VoxelMap.slang  VoxelRender.comp  VoxelRender.frag  VoxelRender.slang  VoxelTraversal.glsl  VoxelTraversal.slang
src/VoxelRT/Shaders/Denoise/: Filter.comp  Reproject.comp
src/VoxelRT/Shaders/Havk/: Core.slang  FullscreenPass.slang  PanoramaToCube.slang
